--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
                 .attr('x', width / 2 + margin)
                 .attr('y', height + margin * 1.7)
                 .attr('text-anchor', 'middle')
-                .text('Total population of ' + currentCountry + ' in year ' +  currentYear + ': ' + totalPopulation);
+                .text('Total population of ' + currentCountry + ' in year ' +  currentYear + ' was: ' + totalPopulation);
 
             svgContainer.append('text')
                 .attr('class', 'title')
